Fix url bar issues on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,7 @@
+html, body {
+  height: 100%;
+}
+
 html {
     background-color: #FFFFFF;
     color: #212121;
@@ -49,7 +53,7 @@ svg {
 }
 
 .main-content {
-  height: calc(100vh - 3rem);
+  height: calc(100% - 3rem);
 }
 
 .splide, .splide__track, .splide__list {
@@ -57,11 +61,11 @@ svg {
 }
 
 .art-carousel__slide {
-  height: calc(100% - 20px);
+  height: calc(100% - 24px);
   margin-left: 40px;
   margin-right: 40px;
-  margin-bottom: 20px;
-  margin-top: 0px;
+  margin-bottom: 24px;
+  margin-top: 0;
 
   display: flex;
   flex-direction: column;
